[gd_scene load_steps=6 format=3 uid="uid://ca7gqgiralhwj"]

[ext_resource type="Theme" uid="uid://bnulg8akvjth4" path="res://DarkTheme/Dark.theme" id="1_vxwpq"]
[ext_resource type="Script" path="res://NetworkSetup.gd" id="1_whtda"]
[ext_resource type="Shader" uid="uid://cluafy80w7sqc" path="res://Menu/MainMenu2.tres" id="3_7i6t6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bjno"]
shader = ExtResource("3_7i6t6")

[sub_resource type="CanvasTexture" id="CanvasTexture_5oklb"]

[node name="NetworkSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vxwpq")
script = ExtResource("1_whtda")

[node name="MultiplayerConfig" type="Control" parent="."]
unique_name_in_owner = true
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreateServer" type="Button" parent="MultiplayerConfig"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -49.0
offset_right = 60.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "Host Game"

[node name="JoinServer" type="Button" parent="MultiplayerConfig"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 11.0
offset_right = 60.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
text = "Join Game"

[node name="ServerIpAddress" type="LineEdit" parent="MultiplayerConfig"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 9.0
offset_right = 69.0
offset_bottom = 40.0
grow_horizontal = 2
text = "localhost"
placeholder_text = "Enter IP Adress"
alignment = 1

[node name="Background" type="TextureRect" parent="MultiplayerConfig"]
z_index = -2
material = SubResource("ShaderMaterial_5bjno")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CanvasTexture_5oklb")

[node name="BackButton" type="Button" parent="MultiplayerConfig"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 166.0
offset_right = 60.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
text = "Go Back"

[node name="DeviceIpAdress" type="Label" parent="MultiplayerConfig"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
